--- a/src/1-Intro/ch1-lit_review.tex
+++ b/src/1-Intro/ch1-lit_review.tex
@@ -6,7 +6,7 @@ While TKA largely relieves symptomatic osteoarthritis, roughly 20\% of TKA patie
 Standard methods of musculoskeletal diagnosis cannot quantify the dynamic state of the joint, either pre- or post-operatively; clinicians must rely on static imaging (radiography, MRI, CT) or qualitative mechanical tests to determine the condition of the affected joint, and these tests cannot easily be performed during weight-bearing or dynamic movement when most pain symptoms occur.
 Unfortunately, most of the tools used to quantify 3D dynamic motion are substantially affected by soft-tissue artifacts \cite{gaoInvestigationSoftTissue2008,stagniQuantificationSoftTissue2005,linEffectsSoftTissue2016}, are prohibitively time-consuming or expensive \cite{daemsValidationThreedimensionalTotal2016}, or cannot be performed with equipment available at most hospitals.
 It is clear that there is currently a lack of clinically viable methods that can quantify dynamic, weight-bearing kinematics of joints after arthroplasty procedures.
-This gap limits clinicians' ability to relate patient-reported instability and discomfort during activity to measurable joint mechanics \citep{banksWhatPostoperativeOutcome2017}.
+This gap limits clinicians' ability to relate patient-reported instability and discomfort during activity to measurable joint mechanics \cite{banksWhatPostoperativeOutcome2017}.
 
 Model-image registration is a process where a 3D model is aligned to match an object's projection in an image \cite{brownSurveyImageRegistration1992}.
 Researchers have performed model-image registration using single-plane fluoroscopic or flat-panel imaging since the 1990s. Early methods used pre-computed distance maps \cite{lavalleeRecoveringPositionOrientation1995,zuffiModelbasedMethodReconstruction1999}, or shape libraries \cite{banksAccurateMeasurementThreedimensional1996,wallaceAnalysisThreedimensionalMovement1980,wallaceEfficientThreedimensionalAircraft1980} to match the projection of a 3D implant model to its projection in a radiographic image.
