--- a/src/aim3/latent-kinematics-space.tex
+++ b/src/aim3/latent-kinematics-space.tex
@@ -12,19 +12,19 @@ This technique is somewhat similar to how language translation models work in NL
 The goal is to start with a maximal set of kinematics measurements for a wide array of movements, and remove those that can be inferred from the rest.
 
 \subsection{Brief Mathematical Preliminary and Notation}
-Let $\mathcal{X}_{mvt}$ be the ambient kinematics space from which a particular sample is measured, where $mvt \in \{\text{stair},\text{walk}, \text{lunge}, \cdots\}$.
+Let $\mathfrak{X}_{mvt}$ be the ambient kinematics space from which a particular sample is measured, where $mvt \in \{\text{stair},\text{walk}, \text{lunge}, \cdots\}$.
 Essentially, this is the space of all possible kinematics patterns for a particular movement.
-For simplicity, we can assume that this space $\mathcal{X}_{mvt}$ follows some distribution, $\mu_{mvt}$.
-The ``latent space'' of our kinematics is $\mathcal{Z}$ and follows some fixed distribution, $\xi$.
-For a universal translator, wherein the expressiveness of outputs resembles the underlying musculoskeletal system of that particular patient, you would not have a latent space for each movement, ($\mathcal{Z}_{mvt}$), but rather, the single latent space would (hopefully) encode all relevant information about the patient.
+For simplicity, we can assume that this space $\mathfrak{X}_{mvt}$ follows some distribution, $\mu_{mvt}$.
+The ``latent space'' of our kinematics is $\mathfrak{Z}$ and follows some fixed distribution, $\xi$.
+For a universal translator, wherein the expressiveness of outputs resembles the underlying musculoskeletal system of that particular patient, you would not have a latent space for each movement, ($\mathfrak{Z}_{mvt}$), but rather, the single latent space would (hopefully) encode all relevant information about the patient.
 
-Mathematically, we can view this translator as a collection of an encoder, $F$, which takes us from the ambient space to the latent space, $F: \mathcal{X}_{mvt,1} \mapsto \mathcal{Z}$, and a decoder, $G$ which takes us from the latent space back to our ambient space, $G: \mathcal{Z} \mapsto \mathcal{X}_{mvt,2}$. The encoder-decoder architecture is a design decision outside the scope of this dissertation, but common choices include Variational Autoencoder (VAE) and Transformer-based networks \cite{vaswaniAttentionAllYou2017}.
+Mathematically, we can view this translator as a collection of an encoder, $F$, which takes us from the ambient space to the latent space, $F: \mathfrak{X}_{mvt,1} \mapsto \mathfrak{Z}$, and a decoder, $G$ which takes us from the latent space back to our ambient space, $G: \mathfrak{Z} \mapsto \mathfrak{X}_{mvt,2}$. The encoder-decoder architecture is a design decision outside the scope of this dissertation, but common choices include Variational Autoencoder (VAE) and Transformer-based networks \cite{vaswaniAttentionAllYou2017}.
 However, we can generally say that our encoder architecture is parametrized by some collection of variables, $\phi$, and our decoder parametrized by $\theta$.
 And so, notationally, we can view this problem as minimizing the distance between $\xi_{\phi} = F_{\phi}\mu_{mvt}$ and $\xi$, as well as minimizing the distance between $\mu_{mvt,\theta} = G_{\theta}\xi_{\phi}$ and $\mu$.
 The specifics of the math are outside the scope of this dissertation, but for interested readers, I recommend reading Jong Le's Geometry of Deep Learning, Chapter 13 \cite{yeGeometryDeepLearning2022}, which discusses metrics on probability spaces, multiple forms of divergence, and the requisite geometric and statistical intuition behind how these types of architectures work.
 
 \subsection{A Kinematics Translator}
-The main goal behind a kinematics translator is to build up a rich enough representation of the latent space of a patients kinematics, $\mathcal{Z}$, with the smallest possible number of images required.
+The main goal behind a kinematics translator is to build up a rich enough representation of the latent space of a patients kinematics, $\mathfrak{Z}$, with the smallest possible number of images required.
 A ``translator'' achieves this by being able to determine, for example, the ``stair rise'' kinematics from the ``walking'' kinematics, without ever needing to actually capture a patient walking up the stairs.
 This has obvious benefits if one is trying to reduce the clinical footprint of autonomous kinematics measurements.
 
@@ -34,7 +34,7 @@ To start, kinematics were grouped by movement (e.g. walking, stair rise, lunge, 
 We standardized all kinematics data using B-splines and interpolation so that each movement was represented with 100 points.
 These 100 points at each anatomic rotation/translation measurement can be thought of as a ``word'' in our translation paradigm, meaning that for any given translation task, we are translating six ``words'' into six ``words''.
 Each of these 6 kinematics measurements for movement one would be the input to our network, and the desired output are the six kinematics measurements from movement two.
-With a sufficient amount of data, this would build up a rich representation of our latent space, $\mathcal{Z}$, such that it can be directly sampled or analyzed to learn about the underlying kinematics of a patient.
+With a sufficient amount of data, this would build up a rich representation of our latent space, $\mathfrak{Z}$, such that it can be directly sampled or analyzed to learn about the underlying kinematics of a patient.
 Unfortunately, a lack of standardization caused three major problems when performing this analysis: (1) Different groups calling the different movements the same thing, (2) Different groups using different movements, and (3) Different groups measuring kinematics at different and non-standard flexion angles.
 
 \subsection{Problem 1: Groups calling different movements the same thing}
