--- a/ufdissertation.cls
+++ b/ufdissertation.cls
@@ -164,8 +164,8 @@
 %%% They want Times New Roman, or Arial. 
 %%% Times New Roman is loaded by default, uncomment the \renewcommand below to switch it to Arial.
 
-\usepackage{mlmodern}
-% \RequirePackage{mathptmx}%  This is required to load and convert to times new roman
+%\usepackage{mlmodern}
+\RequirePackage{mathptmx}%  This is required to load and convert to times new roman
 %\RequirePackage{helvet}%    This is required to load Arial Font
 %\renewcommand{\familydefault}{\sfdefault}% Converts default to actual Arial
 
